--- a/javaee7-spring-mvc/src/main/resources/templates/product.html
+++ b/javaee7-spring-mvc/src/main/resources/templates/product.html
@@ -5,14 +5,14 @@
   layout:decorate="~{/fragments/layout.html}">
 <body>
 	<section layout:fragment="content">
-		<p th:text="${message}">placeholder message</p>
-		<h1>Welcome to spring with layout2...</h1>
-		<img th:src="@{/images/apple.jpeg}"/>
-		<p>2013+2 <span th:text="2013 + 2">1494</span>.</p>
 		
-		<div th:if="${admin} == true">
-			<h1>Admin</h1>
-		</div>
+			<div th:each="item : ${products}">
+				Name <span th:text="${item.name}"></span>
+				<br/>
+				Price <span th:text="${item.price}"></span>
+			</div>
+		
+		
 	</section>
 </body>
 </html>
