--- a/javaee7-spring-mvc/src/main/resources/templates/books/new.html
+++ b/javaee7-spring-mvc/src/main/resources/templates/books/new.html
@@ -5,15 +5,16 @@
   layout:decorate="~{/fragments/layout.html}">
 <body>
 	<section layout:fragment="content">
-		<form action="#" th:action="@{/books/new}" 
+		<form th:action="${edit}?@{/books/edit}:@{/books/new}" 
 			th:object="${book}" 
 			method="POST" 
 			id="addNewBookForm">
 			
-			<!--
+			
 			<div class="form-group">
 				<label for="bookId">Book Id</label>
-				<input  class="form-control" id="bookId" 
+				<input  class="form-control" id="id" 
+				    type="hidden"
 					th:field="*{id}"
 					placeholder="Enter bookid">
 				<div>
@@ -27,7 +28,7 @@
 				</div>
 				
 			</div>
-			-->
+			-
 			<div class="form-group">
 				<label for="author">Author</label>
 				<input class="form-control" 
@@ -65,6 +66,18 @@
 					th:if="${#fields.hasErrors('description')}" th:errors="*{description}"></span>	
 				</div>
 			</div>
+			<div class="form-group">
+							<label for="title">Price</label>
+							<input class="form-control" 
+									id="price" 
+									th:field="*{price}"
+								>
+							<div>	
+							<span 
+								class="error"
+								th:if="${#fields.hasErrors('price')}" th:errors="*{price}"></span>	
+							</div>
+						</div>
 			<div class="form-group">
 				<div>
 					&nbsp;
