--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -193,7 +193,39 @@
                    profileImage="https://randomuser.me/api/portraits/women/59.jpg"/>
       <app-greeting message="Hi,there"/>
       <app-trim-message message=" Hello World  " value="123"/>-->
-      <app-counter/>
+     <!-- <app-counter/>-->
+      <!--<app-todo-list/>-->
+     <!-- <app-border>
+        <div>Hello</div>
+      </app-border>
+      <app-border>
+
+      </app-border>-->
+     <!-- <app-layout>
+        <app-layout-body>
+          This is body
+        </app-layout-body>
+        <app-layout-header>
+          <h1>This is header</h1>
+        </app-layout-header>
+        &lt;!&ndash;<app-layout-footer>
+          <p>This is footer</p>
+        </app-layout-footer>&ndash;&gt;
+        <div ngProjectAs="app-layout-footer" >
+          <span>footer</span>
+        </div>
+      </app-layout>-->
+     <!-- <app-todo-list/>-->
+     <!-- <app-todo-list/>-->
+     <!-- <app-factorial-input>
+
+      </app-factorial-input>-->
+     <!-- <app-view-child-demo/>-->
+      <app-content-child-demo>
+        <app-greeting message="hello inside in app component">
+          Dummy of content child
+        </app-greeting>
+      </app-content-child-demo>
     </div>
 
 
