--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -221,11 +221,21 @@
 
       </app-factorial-input>-->
      <!-- <app-view-child-demo/>-->
-      <app-content-child-demo>
+      <!--<app-content-child-demo>
         <app-greeting message="hello inside in app component">
           Dummy of content child
         </app-greeting>
-      </app-content-child-demo>
+      </app-content-child-demo>-->
+      <!--<app-native-demo/>-->
+      <!--<app-dynamic-demo [admin]="false"/>-->
+     <!-- <app-view-container-ref-demo/>-->
+     <!-- <app-template-demo/>-->
+      <!--<app-two-way-binding-demo/>-->
+     <!-- <app-cross-two-way-binding-demo/>-->
+      <!--<app-control-flow-demo/>-->
+     <!-- <app-render-list/>-->
+     <!-- <app-switch-demo/>-->
+      <app-pipe-demo/>
     </div>
 
 
