--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -235,7 +235,12 @@
       <!--<app-control-flow-demo/>-->
      <!-- <app-render-list/>-->
      <!-- <app-switch-demo/>-->
-      <app-pipe-demo/>
+    <!--  <app-pipe-demo/>-->
+    <!--  <app-ng-template-demo/>-->
+     <!-- <app-container-demo/>-->
+     <!-- <app-inline-template/>-->
+     <!-- <app-white-space/>-->
+      <app-tab-demo/>
     </div>
 
 
