add dynamic form

--- a/frontend/src/app/components/todo-item/todo-item.component.html
+++ b/frontend/src/app/components/todo-item/todo-item.component.html
@@ -1,6 +1,6 @@
 <div>
   <div>
     {{name()}}
-    <button type="button" (click)="deleteHandler()">Delete</button>
+    <button type="button" (click)="deleteHandler()" class="btn btn-primary">Delete</button>
   </div>
 </div>
