--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -43,6 +43,11 @@
           </li>
           <li class="nav-item">
             <a class="nav-link"
+               routerLink="/todos"
+               routerLinkActive="active">Todo</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link"
                routerLink="/login"
                routerLinkActive="active">Login</a>
           </li>
