--- a/frontend/src/app/pages/movie-details/movie-details.component.html
+++ b/frontend/src/app/pages/movie-details/movie-details.component.html
@@ -1,1 +1,82 @@
-<p>movie-details works!</p>
+<div class="container">
+  Movie Details Reactive Dynamic Form
+
+  <form [formGroup]="movieForm" (ngSubmit)="onSubmit()">
+    <div class="mb-3">
+      <label for="title" class="form-label">Title: </label>
+      <input id="title" type="text" formControlName="title" class="form-control"/>
+      @if (title!.invalid && (title!.dirty || title!.touched)) {
+        <div class="alert alert-danger">
+          @if (title!.hasError('required')) {
+            <div>
+              Title is required.
+            </div>
+          }
+
+
+        </div>
+      }
+    </div>
+
+    <div class="mb-3">
+      <label for="year" class="form-label">year: </label>
+      <input id="year" type="text" formControlName="year" class="form-control"/>
+      @if (year!.invalid && (year!.dirty || year!.touched)) {
+        <div class="alert alert-danger">
+          @if (year!.hasError('required')) {
+            <div>
+              Year is required.
+            </div>
+          }
+
+
+        </div>
+      }
+    </div>
+    <div class="mb-3">
+      <label for="director" class="form-label">Director: </label>
+      <input id="director" type="text" formControlName="director" class="form-control"/>
+      @if (director!.invalid && (director!.dirty || director!.touched)) {
+        <div class="alert alert-danger">
+          @if (director!.hasError('required')) {
+            <div>
+              Director is required.
+            </div>
+          }
+
+
+        </div>
+      }
+    </div>
+    <div class="mb-3">
+      <div formArrayName="genres">
+        <h2>Genre</h2>
+        <button type="button" class="btn btn-primary" (click)="addGenre()">+ Add Genres</button>
+        @for (genre of genres.controls;let i = $index; track genre; ) {
+          <div class="container row">
+            <!-- The repeated alias template -->
+            <label for="genre-{{ i }}"
+                   class="form-label col-md-1">Genre:</label>
+            <input id="genre-{{ i }}" type="text"
+                   class="form-control col-md-2"
+                   [formControlName]="i" />
+            @if (genres.at(i)!.invalid && (genres.at(i)!.dirty || genres.at(i)!.touched)) {
+                <div class="alert alert-danger">
+                  @if (genres.at(i)!.hasError('required')) {
+                    <div> Genre is required</div>
+
+                  }
+                </div>
+            }
+
+            <button type="button" class="btn btn-primary col-md-1" (click)="removeGenre(i)">Remove</button>
+          </div>
+        }
+      </div>
+    </div>
+    <div class="mb-3">
+      <button type="submit" class="btn btn-success" [disabled]="!movieForm.valid">Submit</button>
+
+    </div>
+  </form>
+</div>
