add reactive data service

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -129,7 +129,7 @@
      <!-- <app-tab-demo/>
       <app-directive-demo/>-->
    <!--   <app-todo-list-2/>-->
-
+    <app-todo-count/>
 
     </div>
 
