--- a/frontend/src/app/components/todos/todo/todo.component.html
+++ b/frontend/src/app/components/todos/todo/todo.component.html
@@ -2,7 +2,7 @@
   <div>
     {{todo().title}}
     &nbsp;
-    <button type="button" class="btn btn-primary">
+    <button type="button" class="btn btn-primary" (click)="onDeleteTodo()">
       Delete
     </button>
   </div>
