--- a/frontend/src/app/components/todos/todo-list/todo-list.component.html
+++ b/frontend/src/app/components/todos/todo-list/todo-list.component.html
@@ -1,6 +1,6 @@
 <div>
   Todo list
   @for(todo of todos;track todo.id){
-    <app-todo [todo]="todo"/>
+    <app-todo [todo]="todo" (todoDeleted)="deleteTodo($event)"/>
   }
 </div>
