--- a/angular-spring-spa/src/app/features/movies/components/movie-ui/movie-ui.component.html
+++ b/angular-spring-spa/src/app/features/movies/components/movie-ui/movie-ui.component.html
@@ -1,5 +1,8 @@
-<div class="card" style="width: 18rem;">
-  <img src="https://i0.wp.com/www.ucreative.com/wp-content/uploads/2009/11/closer.jpg?w=660&ssl=1" class="card-img-top" alt="...">
+<div >
+  <img src="https://i0.wp.com/www.ucreative.com/wp-content/uploads/2009/11/closer.jpg?w=660&ssl=1"
+       class="card-img-top"
+       width="50px"
+      >
   <div class="card-body">
     <h5 class="card-title">
       {{movie().name}}
@@ -18,8 +21,6 @@
         <ol>{{genre}}</ol>
       }
     </ul>
-    <button tpye="button" class="btn btn-primary" (click)="goToMovieDetails()">
-      Details
-    </button>
+
   </div>
 </div>
