--- a/angular-spring-spa/src/app/features/movies/components/movie-details-page/movie-details-page.component.html
+++ b/angular-spring-spa/src/app/features/movies/components/movie-details-page/movie-details-page.component.html
@@ -1,3 +1,12 @@
-<div>
+
+<app-movie-new-form-dialog #movieNewFormDlg
+    [editMovie]="movie">
+</app-movie-new-form-dialog>
+<div class="container container-fluid">
+  <div>
+    <button type="button" class="btn btn-primary" (click)="goToMoviesPage()">Back</button>
+    &nbsp;
+    <button type="button" class="btn btn-primary" (click)="showEditMovieModal()">Edit</button>
+  </div>
   <app-movie-details [movie]="movie"/>
 </div>
