--- a/angular-spring-spa/src/app/features/movies/components/movie-ui/movie-ui.component.html
+++ b/angular-spring-spa/src/app/features/movies/components/movie-ui/movie-ui.component.html
@@ -1,8 +1,10 @@
 <div >
-  <img src="https://i0.wp.com/www.ucreative.com/wp-content/uploads/2009/11/closer.jpg?w=660&ssl=1"
-       class="card-img-top"
-       width="50px"
-      >
+  <div class="container">
+    <img src="https://i0.wp.com/www.ucreative.com/wp-content/uploads/2009/11/closer.jpg?w=660&ssl=1"
+         class="card-img-top movie-image"
+    >
+  </div>
+
   <div class="card-body">
     <h5 class="card-title">
       {{movie().name}}
